c/examples/writing-a-c-compiler-tests/tests/chapter_1/valid/return_2.c
int main(void) {
    return 2;
}