c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/misspelled_keyword.c
int main(void) {
    returns 0;
}